--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "staking-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node-dev src/app.ts"
+    "dev": "npx ts-node-dev src/app.ts",
+    "start": "nodemon src/app.ts"
   },
   "repository": {
     "type": "git",
