--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "staking-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node-dev src/app.ts",
-    "start": "node dist/app.js",
+    "dev": "npx ts-node-dev src/index.ts",
+    "start": "node dist/index.js",
     "build": "tsc --outDir dist"
   },
   "repository": {
