chore: change main function

--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,14 @@
   "builds": [
       {
           "src": "dist/index.js",
-          "use": "@vercel/node"
+          "use": "@vercel/node",
+          "config": { "includeFiles": ["dist/**"] }
       }
   ],
   "routes": [
       {
-          "src": "/dist/(.*)",
-          "dest": "index.js"
+          "src": "/(.*)",
+          "dest": "dist/index.js"
       }
   ]
 }
