--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx ts-node-dev src/index.ts",
-    "start": "node dist/index.js",
+    "start": "node src/index.ts",
     "build": "tsc --outDir dist"
   },
   "repository": {
